--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,18 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
+repositories {
+    mavenCentral()
+}
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
