--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,11 +9,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// query-dsl
-	implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// query-dsl
+	implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
@@ -36,4 +37,12 @@ dependencies {
 
 clean {
 	delete file('src/main/generated')
+}
+
+bootJar {
+	enabled = true
+}
+
+jar {
+	enabled = false
 }
