--- a/.github/workflows/depoy.yml
+++ b/.github/workflows/depoy.yml
@@ -65,8 +65,9 @@ jobs:
         run: |
           echo "${{ secrets.EXTERNAL_SSH_KEY }}" > private_key.pem
           chmod 600 private_key.pem
-          scp -v -i private_key.pem -o StrictHostKeyChecking=no external-0.0.1-SNAPSHOT.jar ${{ secrets.EXTERNAL_USERNAME }}@${{ secrets.EXTERNAL_HOST }}:${{ secrets.EXTERNAL_PATH }}/external-01.jar
-          echo "scp is finished"
+          sftp -i private_key.pem ${{ secrets.EXTERNAL_USERNAME }}@${{ secrets.EXTERNAL_HOST }} << EOF
+          put external-0.0.1-SNAPSHOT.jar ${{secrets.EXTERNAL_PATH}}/external-0.0.1-SNAPSHOT.jar
+          EOF
           rm -f private_key.pem
      
       - name: Run Script
